# Viabilidad_Eolica

./: Arangoiti_GN_2025.csv  Erremendia _Salazar_ GN_2025_Presion.csv  Lectura_PracticasEolica.ipynb  entregable.csv  pyproject.toml
.ipynb_checkpoints/: Lectura_PracticasEolica-checkpoint.ipynb
src/viabilidad_eolica/: __init__.py
